fixed menu issue and added icons

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@ h1 {
   /*<link rel="preconnect" href="https://fonts.gstatic.com"> <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,300&display=swap" rel="stylesheet">*/
 }
 
-.container-fluid {
+
+/* .container-fluid {
   padding: 3% 15%;
-}
+} */
